--- a/quatang.html
+++ b/quatang.html
@@ -23,7 +23,7 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
-  <link rel="stylesheet" href="/baitaplon/Assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <div class="bar">
