--- a/quatang.html
+++ b/quatang.html
@@ -114,7 +114,7 @@
         <h1>ƯU ĐÃI MỖI NGÀY</h1>
       </div>
       <div class="gift-items">
-          <img src="/baitaplon/Assets/img/gift/gift1.jpg" alt="Group 12 Combo" class="gift-img">
+          <img src="./assets/img/gift/gift1.jpg" alt="Group 12 Combo" class="gift-img">
           <div class="gift-body">
             <h3 class="gift-heading">Group 12 Combo 7h</h3>
             <p class="gift-content">Free 1 bỏng ngô + 1 nước uống khi mua vé và xem phim tại rạp vào sau 7h các ngày trong tuần</p>
@@ -123,7 +123,7 @@
       </div>
 
       <div class="gift-items">
-          <img src="/baitaplon/Assets/img/gift/gift1.jpg" alt="Group 12 Combo" class="gift-img">
+          <img src="./assets/img/gift/gift1.jpg" alt="Group 12 Combo" class="gift-img">
           <div class="gift-body">
             <h3 class="gift-heading">Group 12 Combo Weekend</h3>
             <p class="gift-content">Free 1 bỏng ngô + 1 nước uống khi mua vé và xem phim tại rạp vào hai ngày cuối tuần</p>
@@ -135,7 +135,7 @@
         <h1>ƯU ĐÃI MỖI TUẦN</h1>
       </div>
       <div class="gift-items">
-        <img src="/baitaplon/Assets/img/gift/gift2.jpg" alt="Group 12 Combo" class="gift-img">
+        <img src="./assets/img/gift/gift2.jpg" alt="Group 12 Combo" class="gift-img">
         <div class="gift-body">
          <h3 class="gift-heading">Group 12 Combo Two Week</h3>
          <p class="gift-content">Khách hàng mua vé và xem phim tại rạp chiếu phim trong hai tuần liên tiếp sẽ được giảm 5% giá vé trong tuần thứ 2</p>
@@ -147,7 +147,7 @@
         <h1>ƯU ĐÃI MỖI THÁNG</h1>
       </div>
       <div class="gift-items">
-        <img src="/baitaplon/Assets/img/gift/gift2.jpg" alt="Group 12 Combo" class="gift-img">
+        <img src="./assets/img/gift/gift2.jpg" alt="Group 12 Combo" class="gift-img">
         <div class="gift-body">
          <h3 class="gift-heading">Group 12 Combo Month</h3>
          <p class="gift-content">Khách hàng có thẻ đăng kí mua vé mỗi tháng (thẻ VIP) sẽ nhận được 1 vé xem phim 2D miễn phí vào mỗi tháng</p>
@@ -159,7 +159,7 @@
         <h1>ƯU ĐÃI KHI ĐI THEO NHÓM</h1>
       </div>
       <div class="gift-items">
-        <img src="/baitaplon/Assets/img/gift/gift3.jpg" alt="Group 12 Combo" class="gift-img">
+        <img src="./assets/img/gift/gift3.jpg" alt="Group 12 Combo" class="gift-img">
         <div class="gift-body">
          <h3 class="gift-heading">Group 12 Combo Couple, Triple</h3>
          <p class="gift-content">Giảm 6% giá vé khi đi theo nhóm hai đến ba người</p>
@@ -168,7 +168,7 @@
       </div>
 
       <div class="gift-items">
-        <img src="/baitaplon/Assets/img/gift/gift3.jpg" alt="Group 12 Combo" class="gift-img">
+        <img src="./assets/img/gift/gift3.jpg" alt="Group 12 Combo" class="gift-img">
         <div class="gift-body">
          <h3 class="gift-heading">Group 12 Combo Quadruple</h3>
          <p class="gift-content">Giảm 9% giá vé khi đi theo nhóm bốn người trở lên</p>
@@ -178,7 +178,7 @@
 
     </div>  
       <div class="content-img">
-       <img src="/baitaplon/Assets/img/content/content.jpg" alt="">
+       <img src="./assets/img/content/content.jpg" alt="">
       </div>
 
   </div>
