--- a/phim-user.html
+++ b/phim-user.html
@@ -90,11 +90,11 @@
         <span class="menu_link">Xin chào, User</span>
         <div class="account-type">
           <ul class="account-child">
-            <li class="menu_child_item"><a href="user.html" class="account-item">Quản lý tài khoản</a></li>
-            <li class="menu_child_item"><a href="vexemphim.html" class="account-item">Quản lý vé xem phim</a></li>
-            <li class="menu_child_item"><a href="quatang.html" class="account-item">Quà tặng</a></li>
-            <li class="menu_child_item"><a href="hoivien.html" class="account-item">Hội viên</a></li>
-            <li class="menu_child_item"><a href="phim.html" class="account-item">Đăng xuất</a></li>
+            <li class="menu_child_item"><a target="_blank" href="user.html" class="account-item">Quản lý tài khoản</a></li>
+            <li class="menu_child_item"><a target="_blank" href="vexemphim.html" class="account-item">Quản lý vé xem phim</a></li>
+            <li class="menu_child_item"><a target="_blank" href="quatang.html" class="account-item">Quà tặng</a></li>
+            <li class="menu_child_item"><a target="_blank" href="hoivien.html" class="account-item">Hội viên</a></li>
+            <li class="menu_child_item"><a target="_blank" href="phim.html" class="account-item">Đăng xuất</a></li>
           </ul>
         </div>
       </a> 
