--- a/quatang.html
+++ b/quatang.html
@@ -10,7 +10,7 @@
           type="image/png"
           href="https://cdn.glitch.global/2c8b0daf-f130-49e4-8e91-ab73cffb4a3f/nhom12..png?v=1665660343284s"
   />
-  <title>Nhóm 12</title>
+  <title>Gift</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -29,8 +29,8 @@
   <div class="bar">
     <div class="header_inner">
       <ul class="menu">
-        <li class="menu_item logo_img"><a href="./phim-user.html"><img src="https://cdn.glitch.global/2745b7c7-87eb-459a-949f-fc648cf93057/Untitled-1.png?v=1662558393072" alt="" class="logo-img"></a></li>
-        <li class="menu_item"><a href="./phim-user.html" class="menu_link">Home</a></li>
+        <li class="menu_item logo_img"><a href=""><img src="https://cdn.glitch.global/2745b7c7-87eb-459a-949f-fc648cf93057/Untitled-1.png?v=1662558393072" alt="" class="logo-img"></a></li>
+        <li class="menu_item"><a href="" class="menu_link">Home</a></li>
         <li class="menu_item movies">
           <span class="menu_link">Movies</span>
           <div class="movies_1">
@@ -92,7 +92,7 @@
           <ul class="account-child">
             <li class="menu_child_item"><a href="user.html" class="account-item">Quản lý tài khoản</a></li>
             <li class="menu_child_item"><a href="vexemphim.html" class="account-item">Quản lý vé xem phim</a></li>
-            <li class="menu_child_item"><a href="quatang.html" class="account-item">Quà tặng</a></li>
+            <li class="menu_child_item"><a href="nhanvien.html" class="account-item">Quà tặng</a></li>
             <li class="menu_child_item"><a href="hoivien.html" class="account-item">Hội viên</a></li>
             <li class="menu_child_item"><a href="phim.html" class="account-item">Đăng xuất</a></li>
           </ul>
@@ -102,7 +102,7 @@
   </div>
   <div class="header">
     <div class="advert">
-      <p><img src="https://vnw-img-cdn.popsww.com/api/v2/containers/file2/cms_thumbnails/webbanner_anime-a0652ecca91c-1663234915403-XeJcFOcK.png?v=0&format=webp" style="max-width: 100%;"  alt=""></p>
+      <p><img src="./imgs/qc2.webp" style="max-width: 100%;"  alt="anhr ddepj"></p>
     </div>
   </div>
 
@@ -110,88 +110,90 @@
   
   <div class="content">
     <div class="gift-list">
+
       <div class="gift">
         <h1>ƯU ĐÃI MỖI NGÀY</h1>
       </div>
-      <div class="gift-items">
+      <div class="box1">
+        <div class="gift-items">
           <img src="./assets/img/gift/gift1.jpg" alt="Group 12 Combo" class="gift-img">
           <div class="gift-body">
             <h3 class="gift-heading">Group 12 Combo 7h</h3>
             <p class="gift-content">Free 1 bỏng ngô + 1 nước uống khi mua vé và xem phim tại rạp vào sau 7h các ngày trong tuần</p>
             <p class="gift-sub-content">Free thêm 1 bỏng ngô + 1 nước uống khi đi theo nhóm từ hai người trở lên</p>
           </div>
-      </div>
+        </div>
 
-      <div class="gift-items">
+        <div class="gift-items">
           <img src="./assets/img/gift/gift1.jpg" alt="Group 12 Combo" class="gift-img">
           <div class="gift-body">
             <h3 class="gift-heading">Group 12 Combo Weekend</h3>
             <p class="gift-content">Free 1 bỏng ngô + 1 nước uống khi mua vé và xem phim tại rạp vào hai ngày cuối tuần</p>
             <p class="gift-sub-content">Free thêm 1 bỏng ngô + 1 nước uống khi đi theo nhóm từ hai người trở lên</p>
           </div>
+        </div>
       </div>
+      
 
       <div class="gift">
         <h1>ƯU ĐÃI MỖI TUẦN</h1>
       </div>
-      <div class="gift-items">
-        <img src="./assets/img/gift/gift2.jpg" alt="Group 12 Combo" class="gift-img">
-        <div class="gift-body">
-         <h3 class="gift-heading">Group 12 Combo Two Week</h3>
-         <p class="gift-content">Khách hàng mua vé và xem phim tại rạp chiếu phim trong hai tuần liên tiếp sẽ được giảm 5% giá vé trong tuần thứ 2</p>
-         <p class="gift-sub-content">Giảm lên đến 10% giá vé nếu cả nhóm từ 2 người trở lên đến rạp trong hai tuần liên tiếp</p>
-        </div>
-      </div>
-
-      <div class="gift">
-        <h1>ƯU ĐÃI MỖI THÁNG</h1>
-      </div>
-      <div class="gift-items">
-        <img src="./assets/img/gift/gift2.jpg" alt="Group 12 Combo" class="gift-img">
-        <div class="gift-body">
-         <h3 class="gift-heading">Group 12 Combo Month</h3>
-         <p class="gift-content">Khách hàng có thẻ đăng kí mua vé mỗi tháng (thẻ VIP) sẽ nhận được 1 vé xem phim 2D miễn phí vào mỗi tháng</p>
-         <p class="gift-sub-content">Khi mua vé lần đầu tiên trong tháng sẽ được giảm 10% giá vé</p>
-        </div>
-      </div>
-
-      <div class="gift">
-        <h1>ƯU ĐÃI KHI ĐI THEO NHÓM</h1>
-      </div>
-      <div class="gift-items">
-        <img src="./assets/img/gift/gift3.jpg" alt="Group 12 Combo" class="gift-img">
-        <div class="gift-body">
-         <h3 class="gift-heading">Group 12 Combo Couple, Triple</h3>
-         <p class="gift-content">Giảm 6% giá vé khi đi theo nhóm hai đến ba người</p>
-         <p class="gift-sub-content">Free 1 bỏng ngô + 2 nước uống khi mua vé và xem phim tại rạp</p>
-        </div>
-      </div>
-
-      <div class="gift-items">
-        <img src="./assets/img/gift/gift3.jpg" alt="Group 12 Combo" class="gift-img">
-        <div class="gift-body">
-         <h3 class="gift-heading">Group 12 Combo Quadruple</h3>
-         <p class="gift-content">Giảm 9% giá vé khi đi theo nhóm bốn người trở lên</p>
-         <p class="gift-sub-content">Free 2 bỏng ngô + 3 nước uống khi mua vé và xem phim tại rạp</p>
+      <div class="box2">
+        <div class="gift-items">
+          <img src="./assets/img/gift/gift2.jpg" alt="Group 12 Combo" class="gift-img">
+          <div class="gift-body">
+           <h3 class="gift-heading">Group 12 Combo Two Week</h3>
+           <p class="gift-content">Khách hàng mua vé và xem phim tại rạp chiếu phim trong hai tuần liên tiếp sẽ được giảm 5% giá vé trong tuần thứ 2</p>
+           <p class="gift-sub-content">Giảm lên đến 10% giá vé nếu cả nhóm từ 2 người trở lên đến rạp trong hai tuần liên tiếp</p>
+          </div>
         </div>
       </div>
 
     </div>  
-      <div class="content-img">
+      <!-- <div class="content-img">
        <img src="./assets/img/content/content.jpg" alt="">
-      </div>
-
+      </div> -->
   </div>
+
+  <div class="gift">
+    <h1>ƯU ĐÃI MỖI THÁNG</h1> 
+  </div>
+  <div class="box3">
+    <div class="gift-items">
+      <img src="./assets/img/gift/gift2.jpg" alt="Group 12 Combo" class="gift-img">
+      <div class="gift-body">
+       <h3 class="gift-heading">Group 12 Combo Month</h3>
+       <p class="gift-content">Khách hàng có thẻ đăng kí mua vé mỗi tháng (thẻ VIP) sẽ nhận được 1 vé xem phim 2D miễn phí vào mỗi tháng</p>
+       <p class="gift-sub-content">Khi mua vé lần đầu tiên trong tháng sẽ được giảm 10% giá vé</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="gift">
+    <h1>ƯU ĐÃI KHI ĐI THEO NHÓM</h1>
+  </div>
+  <div class="box4">
+    <div class="gift-items">
+      <img src="./assets/img/gift/gift3.jpg" alt="Group 12 Combo" class="gift-img">
+      <div class="gift-body">
+       <h3 class="gift-heading">Group 12 Combo Couple, Triple</h3>
+       <p class="gift-content">Giảm 6% giá vé khi đi theo nhóm hai đến ba người</p>
+       <p class="gift-sub-content">Free 1 bỏng ngô + 2 nước uống khi mua vé và xem phim tại rạp</p>
+      </div>
+    </div>
+  
+    <div class="gift-items">
+      <img src="./assets/img/gift/gift3.jpg" alt="Group 12 Combo" class="gift-img">
+      <div class="gift-body">
+       <h3 class="gift-heading">Group 12 Combo Quadruple</h3>
+       <p class="gift-content">Giảm 9% giá vé khi đi theo nhóm bốn người trở lên</p>
+       <p class="gift-sub-content">Free 2 bỏng ngô + 3 nước uống khi mua vé và xem phim tại rạp</p>
+      </div>
+    </div>  
+  </div>
+
   
   <div id="footer">
-    <div class="foot_Img">
-      <img src="https://media.lottecinemavn.com/Media/WebAdmin/c3702e0ecbe645ab8bced4e4e5a6313d.jpg" width="980" alt="Bottom 1 Black Adam Sneak">
-    </div>
-
-    <div class="foot_Img">
-      <img src="https://media.lottecinemavn.com/Media/WebAdmin/37094c636177406eb315a12ce6bbdbbd.jpg" width="980" height="372" alt="Bottom 2 BPanther Combo 5">
-    </div>
-
     <div class="footer_inner">
       <ul class="footer_link">
         <li class="vach">Chính Sách Khách Hàng Thường Xuyên</li>
