--- a/user.html
+++ b/user.html
@@ -10,7 +10,7 @@
           type="image/png"
           href="https://cdn.glitch.global/2c8b0daf-f130-49e4-8e91-ab73cffb4a3f/nhom12..png?v=1665660343284s"
   />
-  <title>Nhóm 12</title>
+  <title>Account</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -102,7 +102,7 @@
   </div>
   <div class="header">
     <div class="advert">
-      <p><img src="https://vnw-img-cdn.popsww.com/api/v2/containers/file2/cms_thumbnails/webbanner_anime-a0652ecca91c-1663234915403-XeJcFOcK.png?v=0&format=webp" style="max-width: 100%;"  alt=""></p>
+      <p><img src="./imgs/qc2.webp" style="max-width: 100%;"  alt=""></p>
     </div>
   </div>
 
