--- a/vexemphim.html
+++ b/vexemphim.html
@@ -94,12 +94,24 @@
       </a> 
     </div>
   </div>
+  
   <div class="header">
     <div class="advert">
-      <p><img src="https://vnw-img-cdn.popsww.com/api/v2/containers/file2/cms_thumbnails/webbanner_anime-a0652ecca91c-1663234915403-XeJcFOcK.png?v=0&format=webp" style="max-width: 100%;"  alt=""></p>
+      <p><img src="./imgs/qc2.webp" style="max-width: 100%;"  alt=""></p>
     </div>
   </div>
 
+  <div class="movie">
+    <div class="movie-bar">
+      <ul class="movie-child">
+        <li class="movie-item">Shop quà tặng</li>
+        <li class="movie-item" style="font-weight: 700; border-bottom: 3px solid black; padding-bottom: 5px;">Mua vé</li>
+        <li class="movie-item">Phim hot tại rạp</li>
+        <li class="movie-item">Rạp chiếu phim</li>
+        <li class="movie-item">Khuyến mãi</li>
+      </ul>
+    </div>
+  </div>
     <img class="img_header" src="https://media.lottecinemavn.com/Media/WebAdmin/f5077a2497c94aea8d5eb6c58362de8d.jpg" alt="">
     
     <div class="content">
@@ -423,7 +435,7 @@
       </div>
 
       <div class="foot_Img">
-        <img src="https://media.lottecinemavn.com/Media/WebAdmin/37094c636177406eb315a12ce6bbdbbd.jpg" width="980" height="372" alt="Bottom 2 BPanther Combo 5">
+        <img src="http://127.0.0.1:5500/Nhom12/baitaplon/imgs/slide4.jpg" width="980" height="372" alt="Bottom 2 BPanther Combo 5">
       </div>
 
       <div class="footer_inner">
