--- a/phim-user.html
+++ b/phim-user.html
@@ -29,7 +29,7 @@
   <div class="bar">
     <div class="header_inner">
       <ul class="menu">
-        <li class="menu_item logo_img"><a href=""><img src="https://cdn.glitch.global/2745b7c7-87eb-459a-949f-fc648cf93057/Untitled-1.png?v=1662558393072" alt="" class="logo-img"></a></li>
+        <li class="menu_item logo_img"><a href="phim-user.html"><img src="https://cdn.glitch.global/2745b7c7-87eb-459a-949f-fc648cf93057/Untitled-1.png?v=1662558393072" alt="" class="logo-img"></a></li>
         <li class="menu_item"><a href="phim-user.html" class="menu_link">Home</a></li>
         <li class="menu_item movies">
           <span class="menu_link">Movies</span>
