--- a/quatang.html
+++ b/quatang.html
@@ -29,8 +29,8 @@
   <div class="bar">
     <div class="header_inner">
       <ul class="menu">
-        <li class="menu_item logo_img"><a href=""><img src="https://cdn.glitch.global/2745b7c7-87eb-459a-949f-fc648cf93057/Untitled-1.png?v=1662558393072" alt="" class="logo-img"></a></li>
-        <li class="menu_item"><a href="" class="menu_link">Home</a></li>
+        <li class="menu_item logo_img"><a href="phim-user.html"><img src="https://cdn.glitch.global/2745b7c7-87eb-459a-949f-fc648cf93057/Untitled-1.png?v=1662558393072" alt="" class="logo-img"></a></li>
+        <li class="menu_item"><a href="phim-user.html" class="menu_link">Home</a></li>
         <li class="menu_item movies">
           <span class="menu_link">Movies</span>
           <div class="movies_1">
@@ -92,7 +92,7 @@
           <ul class="account-child">
             <li class="menu_child_item"><a href="user.html" class="account-item">Quản lý tài khoản</a></li>
             <li class="menu_child_item"><a href="vexemphim.html" class="account-item">Quản lý vé xem phim</a></li>
-            <li class="menu_child_item"><a href="nhanvien.html" class="account-item">Quà tặng</a></li>
+            <li class="menu_child_item"><a href="quatang.html" class="account-item">Quà tặng</a></li>
             <li class="menu_child_item"><a href="hoivien.html" class="account-item">Hội viên</a></li>
             <li class="menu_child_item"><a href="phim.html" class="account-item">Đăng xuất</a></li>
           </ul>
