--- a/quatang.html
+++ b/quatang.html
@@ -106,8 +106,10 @@
     </div>
   </div>
 
-  <div class="slider"></div>
-  
+  <div class="slider">
+    <img src="./assets/img/slider/slider.jpg" alt="" class="img-slider">
+  </div>
+    
   <div class="content">
     <div class="gift-list">
 
